--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,8 +14,6 @@
 
 
 
-  <!--<script type="text/javascript" src="js/LocalLogin.js"></script>-->
-
 </head>
 
 <body class="responsive">
@@ -67,7 +65,7 @@
 
 
   <script src="/slides.js"></script>
-  <script src="/search.js"></script>
+  <script src="/main-search.js"></script>
   <script src="/shopping-basket.js"></script>
 
 </body>
