--- a/views/kids-shoes.hbs
+++ b/views/kids-shoes.hbs
@@ -32,13 +32,10 @@
         <div class="container" id="container"></div>
 
         {{> common/footer}}    
-        <script src="/search.js" type="module"></script>
+        <script src="/main-search.js" type="module"></script>
         <script src="/shopping-basket.js"></script>
         
     </body>
-<footer>
-  <p>Author: Tim Adams<br><a href="mailto:tim.adams1@hotmail.com">tim.adams1@hotmail.com</a><br><a>&#9742;
-      07469241247</a></p>
-</footer>
+
 
 </html>
