--- a/views/women.hbs
+++ b/views/women.hbs
@@ -33,7 +33,7 @@
 
     
         {{> common/footer}}
-        <script src="/search.js" type="module"></script>
+        <script src="/main-search.js" type="module"></script>
         <script src="/shopping-basket.js"></script>
         
     </body>
