--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -13,9 +13,43 @@
        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/style.css">
-        <script src="/shopping-basket.js" async></script>
-        <script src="/payment.js"></script>
+        <style>
+            .cart-container {
+            margin: 2%;
+            border: 2px dashed #333;
+            border-radius: 4%;
+            padding: 2%;
+          }
+          .cart-header {
+            background-color: #aaa;
+            padding: 1%;
+            border-radius: 3px;
+          }
+          .cart-header h2 {
+            text-align: center;
+            color: #0b1544;
+          }
+          table {
+            width: 100%;
+          }
+          table tr td, th {
+            text-align: center;
+          }
 
+          th, td {
+            padding: 4px;
+          }
+
+          .prod-container {
+            margin: 400px auto;
+            margin-bottom:0px;
+          }
+
+          .checkout-container {
+            text-align: center;
+            margin-bottom:23px;
+          }
+        </style>
        
 
         
@@ -30,25 +64,27 @@
 
         </header>
 
-        <div class="prods-container">
-          <div class="prod-header">
-            <h5 class="prod-title">PRODUCT</h5>
-            <h5 class="price">PRICE</h5>
-            <h5 class="quantity">QUANTITY</h5>
-            <h5 class="total">TOTAL</h5>
-          </div>
-          <div class="prods"></div>
-          <div id="container"></div>
-        </div>
-        <div id="buy-now">Buy Now</div>
-        
+        <div class="prod-container">
+      <div class="cart-container">
+      <div class="cart-header">
+    <h2> You items</h2>
+  </div>
+  <div class="cart-content">
+    <table border="1">
+    </table>
+  </div>
+  </div>
+  <div class="checkout-container">
+    <button class="btn btn-primary" onclick="handleProceedCheckout()">Proceed to Checkout</button>
+  </div>
+        {{!-- <div id="buy-now">Buy Now</div> --}}
         
 
-      <script async
-      src="https://pay.google.com/gp/p/js/pay.js"
-      onload="onGooglePayLoaded()"></script>
-      <script src="/search.js"></script>
+
+       {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
+      {{!-- <script async src="https://pay.google.com/gp/p/js/pay.js" onload="onGooglePayLoaded()"></script> --}}
+      <script src="/cart.js"></script>
 
     </body>
-    {{> common/footer}}
+      {{> common/footer}}
     </html>
