--- a/views/men.hbs
+++ b/views/men.hbs
@@ -38,7 +38,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"
         integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
-    <script src="/search.js" type="module"></script>
+    <script src="/main-search.js" type="module"></script>
     <script src="/shopping-basket.js"></script>
 
 	
