--- a/views/women-shoes.hbs
+++ b/views/women-shoes.hbs
@@ -32,7 +32,7 @@
         <div class="container" id="container"></div>
 
         {{> common/footer}}
-        <script src="/search.js" type="module"></script>
+        <script src="/main-search.js"></script>
         <script src="/shopping-basket.js"></script>
         
     </body>
