--- a/views/women-shoes.hbs
+++ b/views/women-shoes.hbs
@@ -9,33 +9,25 @@
         <title>Your Fashion</title>
         <link rel="stylesheet" type="text/css" href="/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-       
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
        
 
-        
 
     </head>
 
     <body class="responsive">
       
-       
         <header>
           {{> common/navbar}}
         </header>
-        <br>
-        
-        <div id="characterList" class="characterLists"></div> 
+        <div id="characterList" class="characterLists"></div>
         <div class="container" id="container"></div>
-
         {{> common/footer}}
-        <script src="/main-search.js"></script>
         <script src="/shopping-basket.js"></script>
-        
+        <script src="/main-search.js"></script>
     </body>
 
-
-</html>
+    </html>
