--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -1,91 +1,85 @@
 <!DOCTYPE html>
 
-<html lang="en" charset="UTF-8">
+    <html lang="en" charset="UTF-8">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Your Fashion</title>
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/style.css">
-    <style>
-        .prod-container1 {
-            display: flex;
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <title>Your Fashion</title>
+      
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+       
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/style.css">
+        <style>
+          .prod-container {
+            display:flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 100%;
+            width:100%;
             margin: 200 auto;
-            margin-bottom: 50px;
-            margin-top: 100px;
-        }
+            margin-bottom:100px;
+          }
 
-        .form-group {
-            width: 500px;
-        }
-
-        .buy-now {
+          .form-group {
+            width:500px;
+          }
+          .buy-now {
             display: flex;
             justify-content: center;
             position: relative
-        }
-    </style>
+          }
+        </style>
+       
 
+        
 
+    </head>
 
+    <body class="responsive">
+      
+        
+        <header>
+          {{> common/navbar}}
 
-</head>
+        </header>
 
-<body class="responsive">
-
-
-    <header>
-        {{> common/navbar}}
-
-    </header>
-
-    <div class="prod-container1">
-        <div class="form-group">
-            <label for="name">Full name *</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
+        <div class="prod-container">
+              <div class="form-group">
+                <label for="name">Full name</label>
+                <input type="text" class="form-control" id="name"  name="fullName" placeholder="Enter your full name">
+              </div>
+              <div class="form-group">
+                <label for="address">Address</label>
+                <input type="text" class="form-control" id="Address" name="address" placeholder="Enter your address">
+              </div>
+              <div class="form-group">
+                <label for="city">City</label>
+                <input type="text" class="form-control" id="City" name="city" placeholder="Enter your city">
+              </div>
+               <div class="form-group">
+                <label for="city">Zip-code</label>
+                <input type="text" class="form-control" id="ZipCode" name="zipCode" placeholder="Enter your zip code">
+              </div>
+               <div class="form-group">
+                <label for="pnumber">Phone Number</label>
+                <input type="text" class="form-control" id="pNumber" name="phoneNumber" placeholder="Enter your phone number">
+              </div>
         </div>
-        <div class="form-group">
-            <label for="address">Address *</label>
-            <input type="text" class="form-control" id="Address" placeholder="Enter your address" required>
-        </div>
-        <div class="form-group">
-            <label for="city">City *</label>
-            <input type="text" class="form-control" id="City" placeholder="Enter your city" required>
-        </div>
-        <div class="form-group">
-            <label for="city">Post-code *</label>
-            <input type="text" class="form-control" id="PostCode" placeholder="Enter your post code" required>
-        </div>
-        <div class="form-group">
-            <label for="pnumber">Phone Number</label>
-            <input type="text" class="form-control" id="pNumber" placeholder="Enter your phone number">
-        </div>
-        <br>
         <div class="buy-now">
-            <div id="buy-now">Buy Now</div>
+          <div id="buy-now">Buy Now</div>
         </div>
-    </div>
-
-    <p class="g-warning" style="text-align:center;color:orange"></p>
+          <p class="g-warning" style="text-align:center;color:orange"></p>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"
-        integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script async src="https://pay.google.com/gp/p/js/pay.js" onload="onGooglePayLoaded()"></script>
-    <script src="/checkout.js"></script>
-    <script src="/payment.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script async src="https://pay.google.com/gp/p/js/pay.js" onload="onGooglePayLoaded()"></script>
+      <script src="/checkout.js"></script>
+      <script src="/payment.js"></script>
 
-</body>
+    </body>
 
-</html>
+    </html>
