--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,75 +1,56 @@
 <!DOCTYPE html>
-<html>
+    <html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <title>Your Fashion</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/style.css">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <title>Your Fashion</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/style.css">
+        
+       
 
+    </head>
 
+    <body class="responsive">
+      
+       
+        <header>
+          {{> common/navbar}}
 
-</head>
-
-<body class="responsive">
-
-
-  <header>
-    {{> common/navbar}}
-  </header>
-  <div id="characterList" class="characterLists"></div>
-  <main class="cont">
-
-    <div id="characterList"></div>
-    <div class="posts-container"></div>
-  </main>
-  <br>
-
-  <div class="scene">
-    <div class="carousel">
-      <a class="carousel__cell" href="/women" ><img class="slides" 
-          src="https://www.telegraph.co.uk/content/dam/fashion/2022/10/25/TELEMMGLPICT000313960470_trans_NvBQzQNjv4Bq7Cadr0IoOOfMS5GpRLWfGbVvz_IXZinEqtDTKahtjvc.jpeg?imwidth=680">
-      </a>
-      <a class="carousel__cell" href="/women"><img class="slides"
-          src="https://i.cbc.ca/1.4713184.1529440884!/fileImage/httpImage/image.png_gen/derivatives/16x9_780/petite.png">
-      </a>
-      <a class="carousel__cell" href="/women"><img class="slides"
-          src="https://dlsb.co.uk/cdn/shop/collections/Women_s_Clothing.png?v=1662113551"></a>
-      <a class="carousel__cell" href="/kids"><img class="slides"
-          src="https://cdn.shopify.com/s/files/1/0878/3908/files/social_sharing_shopify.jpg?v=1667977060"></a>
-      <a class="carousel__cell" href="/kids"><img class="slides"
-          src="https://www.nextdirect.com/nxtcms/resource/blob/5587208/f0e6f37c9c409a172eb0ca2236449efb/hero1-kids-data.jpg">
-      </a>
-      <a class="carousel__cell" href="/kids"><img class="slides"
-          src="https://i.ebayimg.com/images/g/9bEAAOSwmh9ez480/s-l1200.webp"></a>
-      <a class="carousel__cell" href="/women"><img class="slides"
-          src="https://www.nerdwallet.com/assets/blog/wp-content/uploads/2021/09/GettyImages-1174825598-2400x1440.jpg">
-      </a>
-      <a class="carousel__cell" href="/men"><img class="slides"
-          src="https://www.realmenrealstyle.com/wp-content/uploads/2023/08/Promote-Positive-Communication.jpg"></a>
-      <a class="carousel__cell" href="/men"><img class="slides" src="https://i.insider.com/62e40d594b455800188b5fca?width=700">
-      </a>
-    </div>
+        </header>
+        <div id="characterList" class="characterLists"></div>
+        <main class="cont">
+          <div id="characterList"></div>
+          <div class="posts-container"></div>
+        </main>
+        <br>
+<div class="car-con">
+        <div class="scene">
+          <div class="carousel">
+            <div class="carousel__cell" href="/women"><img class="slides" src="https://www.telegraph.co.uk/content/dam/fashion/2022/10/25/TELEMMGLPICT000313960470_trans_NvBQzQNjv4Bq7Cadr0IoOOfMS5GpRLWfGbVvz_IXZinEqtDTKahtjvc.jpeg?imwidth=680"></div>
+            <div class="carousel__cell" href="/women"><img class="slides" src="https://i.cbc.ca/1.4713184.1529440884!/fileImage/httpImage/image.png_gen/derivatives/16x9_780/petite.png"></div>
+            <div class="carousel__cell" href="/women"><img class="slides" src="https://dlsb.co.uk/cdn/shop/collections/Women_s_Clothing.png?v=1662113551"></div>
+            <div class="carousel__cell" href="/kids"><img class="slides" src="https://cdn.shopify.com/s/files/1/0878/3908/files/social_sharing_shopify.jpg?v=1667977060"></div>
+            <div class="carousel__cell" href="/kids"><img class="slides" src="https://www.nextdirect.com/nxtcms/resource/blob/5587208/f0e6f37c9c409a172eb0ca2236449efb/hero1-kids-data.jpg"></div>
+            <div class="carousel__cell" href="/kids"><img class="slides" src="https://i.ebayimg.com/images/g/9bEAAOSwmh9ez480/s-l1200.webp"></div>
+            <div class="carousel__cell" href="/women"><img class="slides" src="https://www.nerdwallet.com/assets/blog/wp-content/uploads/2021/09/GettyImages-1174825598-2400x1440.jpg"></div>
+            <div class="carousel__cell" href="/men"><img class="slides" src="https://www.realmenrealstyle.com/wp-content/uploads/2023/08/Promote-Positive-Communication.jpg"></div>
+            <div class="carousel__cell" href="/men"><img class="slides" src="https://i.insider.com/62e40d594b455800188b5fca?width=700"></div>
+          </div>
+        </div>
+  <div class="btn-con">
+          <button class="previous-button" style='font-size:50px;'>&#8592;</button>
+          <button class="next-button" style='font-size:50px;'>&#8594;</button>
   </div>
-  <p style="text-align: center;">
-    <button class="previous-button"><span style="font-size: 36px;">&#129128;</span></button>
-    <button class="next-button"><span style="font-size: 36px;">&#129130;</span></button>
-  </p>
+</div>
+         {{> common/footer}}
+    </body>
+      <script src="/slides.js"></script>
+      <script src="/main-search.js"></script>
 
-  
-
-
-  <script src="/slides.js"></script>
-  <script src="/main-search.js"></script>
-  <script src="/shopping-basket.js"></script>
-
-</body>
-
-{{> common/footer}}
-
-</html>
+    </html>
