--- a/views/men.hbs
+++ b/views/men.hbs
@@ -1,48 +1,39 @@
 <!DOCTYPE html>
-<html>
+    <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Your Fashion</title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <title>Your Fashion</title>
+        <link rel="stylesheet" type="text/css" href="/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+       
+        <link rel="stylesheet" type="text/css" href="/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" type="text/css" href="/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+       
 
+        
 
+    </head>
 
+    <body class="responsive">
+      
+       
+        <header>
+          {{> common/navbar}}
+        </header>
+        <br>
+        
+        <div id="characterList" class="characterLists"></div> 
+        <div class="container" id="container"></div>
+        {{> common/footer}}
+        <script src="/main-search.js"></script>
+        <script src="/shopping-basket.js"></script>
+        
+    </body>
 
-
-</head>
-
-<body class="responsive">
-
-
-    <header>
-        {{> common/navbar}}
-    </header>
-    <br>
-
-    <div id="characterList" class="characterLists"></div>
-    <div class="container" id="container"></div>
-
-
-    {{!--
-    <script src="/product-cards.js"></script> --}}
-    {{!--
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"
-        integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script> --}}
-    <script src="/main-search.js" type="module"></script>
-    <script src="/shopping-basket.js"></script>
-
-	
-</body>
-
-{{> common/footer}}
-</html>
+    </html>
