--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -20,8 +20,8 @@
             justify-content: center;
             align-items: center;
             width:100%;
-            margin: 200 auto;
-            margin-bottom:100px;
+            margin-top: 15%;
+            
           }
 
           .form-group {
@@ -30,7 +30,8 @@
           .buy-now {
             display: flex;
             justify-content: center;
-            position: relative
+            position: relative;
+            padding: 20px 0 5px 0;
           }
         </style>
        
