added increase, decrease and remove buttons

--- a/public/style.css
+++ b/public/style.css
@@ -636,104 +636,104 @@ ul{
   .text {font-size: 8px}
 }
 
+/******************** test ********************/
+
+form {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.value-button {
+  display: inline-block;
+  border: 1px solid #ddd;
+  margin: 0px;
+  width: 40px;
+  height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  padding: 11px 0;
+  background: #eee;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.value-button:hover {
+  cursor: pointer;
+}
+
+form #decrease {
+  margin-right: -4px;
+  border-radius: 8px 0 0 8px;
+}
+
+form #increase {
+  margin-left: -4px;
+  border-radius: 0 8px 8px 0;
+}
+
+form #input-wrap {
+  margin: 0px;
+  padding: 0px;
+}
+
+input#number {
+  text-align: center;
+  border: none;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  margin: 0px;
+  width: 40px;
+  height: 40px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 
 /* ---------------Cart page--------------*/
-.prods-container{
-  max-width: 650px;
-  justify-content: space-around;
-  margin: 0 auto;
+
+.forms{
+  margin-top: -8%;
 }
 
-.prods-container .gg-close-o{
-  font-size: 25px;
-  margin-left: 10px;
-  margin-right: 10px;
-  cursor: pointer;
+.remove{
+  border-style: none;
+  border-radius: 20px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
-.prods-container .gg-add{
-  font-size: 25px;
-  margin-left: 10px;
-  margin-right: 10px;
-  cursor: pointer;
+.remove:hover{
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
-.prods-container .gg-remove{
-  font-size: 25px;
-  margin-left: 10px;
-  margin-right: 10px;
-  cursor: pointer;
+.value-button{
+  align-content: center;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.1);
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.prod-header{
-  width: 100%;
-  max-width: 650px;
-  display: flex;
-  justify-content: flex-start;
-  border-bottom: 4px solid #5a5e5f;
-  margin: 0 auto;
-  position: relative;
+.value-button:hover{
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
-.prod-title{
-  width: 45%;
+.number-input{
+  border-style: none;
+  width: 12%;
+  text-align: center;
 }
-
-.price{
-  width: 15%;
-  display: flex;
-  align-items: center;
-  border-bottom: 4px solid #5a5e5f;
-}
-
-.quantity{
-  width: 30%;
-  display: flex;
-  align-items: center;
-  border-bottom: 4px solid #5a5e5f;
-}
-
-.total{
-  width: 10%;
-  border-bottom: 4px solid #5a5e5f;
-  display: flex;
-  align-items: center;
-}
-
-.prod{
-  width: 45%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px 0;
-  border-bottom: 1px solid #5a5e5f;
-}
-
-.prods{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.prod img{
-  width: 75px;
-}
-
-.basketTotalContainer{
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  padding: 10px 0;
-}
-
-.basketTotalTitle{
-  width: 30%;
-}
-
-.basketTotal{
-  width: 10%;
-}
+/**************Checkout***************/
 
 .buy{
   margin-bottom: 20px;
