--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -62,8 +62,8 @@
                 <input type="text" class="form-control" id="City" name="city" placeholder="Enter your city">
               </div>
                <div class="form-group">
-                <label for="city">Zip-code</label>
-                <input type="text" class="form-control" id="ZipCode" name="zipCode" placeholder="Enter your zip code">
+                <label for="city">Post-code</label>
+                <input type="text" class="form-control" id="ZipCode" name="postCode" placeholder="Enter your post code">
               </div>
                <div class="form-group">
                 <label for="pnumber">Phone Number</label>
